--- a/Final_Project.qmd
+++ b/Final_Project.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 ## Introduction
 
-## Research exploration
+## Exploratory data Analyis
 
 ### Frequency table
 
@@ -18,6 +18,10 @@ editor: visual
 
 ### Data analysis
 
+### Further research? (hypothesis testing, regression, ANOVA, or machine learning)
+
+\
+
 ### Supporting research
 
 ### Conclusion
@@ -26,8 +30,24 @@ editor: visual
 
 ### Main Data Set
 
+1.  Data Tidying
+
+2.  Data Wrangling
+
+3.  Data Cleaning
+
 ### Secondary Data Set
 
+1.  Data Tidying
+
+2.  Data Wrangling
+
+3.  Data Cleaning
+
+### Fair and Care Principles
+
 ## Open Science process
+
+## Code Apendix
 
 ## Citations
