--- a/Final_Project.qmd
+++ b/Final_Project.qmd
@@ -142,6 +142,82 @@ The Box and Whisker plot @gpa-stress_plot allows us to confirm what we learned a
 
 ### Hypothesis
 
+This study examines how different aspects of students’ daily routines, specifically the amount of time dedicated to studying, sleep duration, physical activity, social interaction, and participation in extracurricular activities, are associated with both self-reported stress levels and academic performance as measured by GPA. To drive the analysis, the following detailed hypotheses are proposed:
+
+1.  Stress Level and GPA
+
+    -   H0: The mean GPA is equal across all stress categories (Low, Moderate, High).
+
+    -   H1: The mean GPA differs across stress categories.
+
+2.  Study Hours
+
+    -   H0 (gpa): There is no linear relationship between daily study hours and GPA .
+
+    -   H1 (gpa): Daily study hours are correlated with GPA .
+
+    -   H0 (stress): Mean daily study hours are equal across stress categories.
+
+    -   H1 (stress): Mean daily study hours differ across stress categories.
+
+3.  Sleep Duration
+
+    -   H0 (gpa): There is no linear relationship between sleep hours and GPA .
+
+    -   H1 (gpa): Sleep hours are correlated with GPA .
+
+    -   H0 (stress): Mean sleep hours are equal across stress categories
+
+    -   H1 (stress): Mean sleep hours differ across stress categories.
+
+4.  Physical Activity
+
+    -   H0 (gpa): No correlation between physical activity hours and GPA .
+
+    -   H1 (gpa): Physical activity hours are correlated with GPA .
+
+    -   H0 (stress): Mean physical activity hours are equal across stress categories.
+
+    -   H1 (stress): Mean physical activity hours differ across stress categories.
+
+5.  Social Engagement
+
+    -   H0 (gpa): No correlation between social hours and GPA.
+
+    -   H1 (gpa): Social hours are correlated with GPA.
+
+    -   H0 (stress): Mean social hours are equal across stress categories.
+
+    -   H1 (stress): Mean social hours differ across stress categories.
+
+6.  Extracurricular Involvement
+
+    -   H0 (gpa): No linear association between extracurricular hours and GPA.
+
+    -   H1 (gpa): Extracurricular hours are correlated with GPA.
+
+    -   H0 (stress): Mean extracurricular hours are equal across stress categories.
+
+    -   H1 (stress): Mean extracurricular hours differ across stress categories.
+
+7.  Anxiety
+
+    -   H0: Mean GPA is equal for students with and without anxiety.
+
+    -   H1: Mean GPA differs between students with and without anxiety.
+
+8.  Depression
+
+    -   H0: Mean GPA is equal for students with and without depression.
+
+    -   H1: Mean GPA differs between students with and without depression.
+
+9.  Panic Attacks
+
+    -   H0: Mean GPA is equal for students with and without panic attacks.
+
+    -   H1: Mean GPA differs between students with and without panic attacks.
+
 ### Data analysis
 
 ### Further research? (hypothesis testing, regression, ANOVA, or machine learning)
